--- a/Scribe/Base.lproj/LaunchScreen.storyboard
+++ b/Scribe/Base.lproj/LaunchScreen.storyboard
@@ -20,16 +20,15 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ScribeIcon" translatesAutoresizingMaskIntoConstraints="NO" id="EJw-7A-Chg">
-                                <rect key="frame" x="21" y="181.5" width="372" height="533"/>
+                                <rect key="frame" x="52" y="218" width="310.5" height="460"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="EJw-7A-Chg" firstAttribute="width" secondItem="4Af-v3-CzU" secondAttribute="width" multiplier="0.75" id="AZg-Rz-IBP"/>
                             <constraint firstItem="4Af-v3-CzU" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="P4m-M1-zZv"/>
                             <constraint firstItem="4Af-v3-CzU" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="PTr-jc-5Rg"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EJw-7A-Chg" secondAttribute="trailing" constant="21" id="TeB-Fb-vJ7"/>
-                            <constraint firstItem="EJw-7A-Chg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="21" id="nIx-IN-cXc"/>
                             <constraint firstItem="4Af-v3-CzU" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="nuB-tD-9Pe"/>
                             <constraint firstItem="4Af-v3-CzU" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" id="szy-e3-Pyj"/>
                             <constraint firstItem="EJw-7A-Chg" firstAttribute="centerX" secondItem="4Af-v3-CzU" secondAttribute="centerX" id="uER-MG-SgC"/>
@@ -43,7 +42,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="ScribeIcon" width="739" height="533"/>
+        <image name="ScribeIcon" width="839" height="460"/>
         <image name="scribeAppBackground" width="1024" height="1024"/>
     </resources>
 </document>
